# UCSE-2025-IW-TP-G7-Fornari_Gigon_Pluda

./: Dockerfile  README.md  build.sh  main.py  pyproject.toml  run.sh
parroquiaproject/: manage.py
parroquiaproject/accounts/: backends.py  forms.py  tokens.py  urls.py  views.py
parroquiaproject/parroquiaproject/: asgi.py  settings.py  urls.py  wsgi.py
parroquiaproject/sitio/: admin.py  forms.py  models.py  search_indexes.py  urls.py  views.py
parroquiaproject/sitio/css/: styles.css
parroquiaproject/sitio/migrations/: 0001_initial.py  0002_iglesia_imagen.py  0003_remove_iglesia_imagen_iglesia_imagen_url.py  0004_remove_noticia_categoria_remove_horariomisa_texto_and_more.py  0005_actividades_iglesia.py  0006_usuarioiglesias.py  0007_remove_iglesia_imagen_url_and_more.py  0008_noticias.py  0009_noticia_delete_noticias.py  0010_actividades_detalles.py  0011_remove_actividades_detalles_delete_horariomisa.py  0012_alter_actividades_fechavencimiento.py  0013_iglesia_administrador.py  0014_noticia_estado_noticia_fechaaceptacion_and_more.py  0015_alter_noticia_fechaaceptacion_and_more.py  0016_noticia_creador_alter_noticia_fechaaceptacion_and_more.py  0017_alter_noticia_creador_alter_noticia_fechaaceptacion_and_more.py  0018_alter_noticia_fechaaceptacion_and_more.py  0019_alter_noticia_fechaaceptacion_and_more.py  0020_alter_noticia_fechaaceptacion_and_more.py  0021_alter_noticia_fechaaceptacion_and_more.py  (+16 more)
parroquiaproject/whoosh_index/: MAIN_ckup4z9slwc60hir.seg  MAIN_ge2705a5emh8g0cu.seg  MAIN_vhmg6h48p8fcuyxk.seg  _MAIN_1.toc
(+41 files in other folders)
