[project]
name = "ucse-2025-iw-tp-g7-fornari-gigon-pluda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-cloudinary-storage>=0.3.0",
    "django-haystack>=3.3.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise[brotli]>=6.9.0",
    "whoosh>=2.7.4",
]

